objects/DMAPP__DM_DVLS_Component__c.object
<CustomObject>
    <description>ADMIN ONLY DATA CONFIG

This object is responsible for the maintenance of the eLearning Components. It appears as a detail section underneath the Modules page.</description>
    <fields>
        <fullName>DMAPP__DM_DVLS_Module__c</fullName>
        <label>Module</label>
        <referenceTo>DMAPP__DM_DVLS_Module__c</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>DM_DVLS_Components</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Description__c</fullName>
        <inlineHelpText>Overview of the component, typically also used to provide details on what content items are available within the component. 

This is displayed to the user on click of the &apos;i&apos; icon to the right of the component name in the eLearning player.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DMAPP__Order__c</fullName>
        <inlineHelpText>Position in which the component is displayed within the module.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Question_Rollup__c</fullName>
        <inlineHelpText>Automatic calculation of the number of questions within the component. Used to determine the user&apos;s current score in the component.</inlineHelpText>
        <label>Question Rollup</label>
        <summaryForeignKey>DMAPP__DM_DVLS_Question__c.DMAPP__DVLS_Component__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DMAPP__Quicklink_Rollup__c</fullName>
        <label>Quicklink Rollup</label>
        <summaryForeignKey>DMAPP__DM_DVLS_Component_Quicklink__c.DMAPP__DM_DVLS_Component__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DMAPP__Ref_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Unique reference for the component. This value is used when associating a component with a module and/or test questions with a component.</inlineHelpText>
        <label>Ref ID</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Component</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>eLearning Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>